# prandtl

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  README_zh.md  index.html  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml  pages.yml  publish.yml  test.yml
api/physics/: index.html
docs/: SPEC.md  SPEC_zh.md  index.md  install.md
docs/api/: analytical.md  io.md  physics.md  sampling.md  surrogate.md  validation.md
docs/examples/: active-learning.md  flat-plate.md  multi-output.md  physics-constrained.md  tree-surrogate.md  validation-pipeline.md
docs/user-guide/: active-learning.md  co-kriging.md  export.md  gpu-training.md  io.md  physics.md  quickstart.md  sampling.md  sobolev-training.md  training.md  tree-backends.md  validation.md
examples/flat-plate/: index.html
examples/physics-constrained/: index.html
search/: search_index.json
site/SPEC/: index.html
site/SPEC_zh/: index.html
site/api/analytical/: index.html
site/api/io/: index.html
site/api/sampling/: index.html
site/api/surrogate/: index.html
site/api/validation/: index.html
site/examples/multi-output/: index.html
site/examples/validation-pipeline/: index.html
site/install/: index.html
site/user-guide/physics/: index.html
site/user-guide/validation/: index.html
src/prandtl/: __init__.py  _active.py  _analytical.py  _co_kriging.py  _gaussian.py  _io.py  _neural.py  _physics.py  _sampling.py  _sobolev.py  _surrogate.py  _tree.py  _validate.py  analytical.py
tests/: test_active.py  test_co_kriging.py  test_e2e.py  test_io.py  test_physics.py  test_sobolev.py  test_tree.py  test_validate.py
user-guide/export/: index.html
user-guide/io/: index.html
user-guide/quickstart/: index.html
user-guide/sampling/: index.html
user-guide/training/: index.html
